--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -19,6 +19,9 @@ padding: 12px;
 background-color: black;
 opacity: 0.5;
 }
+.home:hover, .admin:hover{
+color: #dce1de;
+}
 .home{
 font-size: 20px;
 text-decoration: none;
@@ -39,6 +42,9 @@ input[type=submit] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+input[type=submit]:hover{
+background-color: #8ecae6;
 }
 footer{
     position: relative;
